<resources>
    <string name="app_name">Вакуум</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Entry activities -->

    <string name="entry_first0">Добро пожаловать!</string>
    <string name="entry_second0">\tДанное приложение об упражнении вакуум живота,
        которое позволяет натренировать внутренние мышцы живота и уменьшить выпирающий или
        свисающий живот, а также сделать талию уже</string>

    <string name="entry_first1">Программа</string>
    <string name="entry_second1">\tПриложение включает в себя три уровня сложности,
        каждый рассчитан на 14 дней. Количество подходов, сложность упражнения и время выполнения
    будут постепенно увеличиваться для вашего прогресса.</string>

    <string name="entry_first2">Противопоказания</string>
    <string name="entry_second2">\t• Заболевания желудочно-кишечного тракта
    \n\t• Болезни сердца
    \n\t• Грыжи
    \n\t• Шесть месяцев после операций в брюшине и тазовой области
    \n\t• Менструация и беременность
    \n\t• Полный желудок. Упражнение нужно выполнять минимум через 3 часа после еды </string>

    <string name="entry_first3">Промокоды</string>
    <string name="entry_second3">\tВы можете полностью отключить рекламу,
        пригласив друга в приложение с помощью промокода. Свой промокод можно найти в настройках.</string>

    <string name="title_activity_main2">Main2Activity</string>

    <!-- Program selection activity -->

    <string name="program_selection">Выбор программы</string>

    <string name="beginner">Новичок</string>
    <string name="medium">Средний</string>
    <string name="advanced">Продвинутый</string>

    <string name="th_day">-й День</string>

    <!-- Settings activity -->

    <string name="settings">Настройки</string>

    <string name="notifications">Напоминания</string>
    <string name="switch_on">Включено</string>
    <string name="switch_off">Выключено</string>

    <string name="ad_free_version">Версия без рекламы</string>
    <string name="activated">Активировано</string>
    <string name="not_activated">Не активировано</string>

    <string name="enter_promo_code">Ввести промокод</string>
    <string name="enter_friend_promo_code">Ввести промокод друга</string>

    <string name="settings_activity__progress_removal_title">Удалить прогресс</string>
    <string name="settings_activity__progress_removal_description">Удалить весь прогресс</string>
    <string name="settings_activity__progress_removal_promo_title">Удалить весь прогресс?</string>
    <string name="settings_activity__progress_removal_promo_description">Будет удален весь достигнутый результат тренировок на всех уровнях</string>
    <string name="settings_activity__progress_removal_promo_yes">Да</string>
    <string name="settings_activity__progress_removal_promo_no">Нет</string>

    <!-- Notification Activity -->

    <string name="every_day">Каждый день</string>
    <string name="on">Вкл</string>
    <string name="off">Выкл</string>
    <string name="save">Сохр</string>
    <string name="notification_was_created">Создано напоминание каждый день в</string>
    <string name="notification_was_deleted">Напоминание было удалено</string>

    <string name="notification">Напоминание</string>
    <string name="time_to_training">Время тренировки!</string>

    <string name="notification_may_not_work">Уведомления могут не работать
        при отключеном приложении на некоторых устройствах
        из-за оптимизации работы батареи. Вы можете добавить приложение в "белый список" чтобы
        уведомления показывались даже после перезагрузки устройства.
        Перейти в настройки?
    </string>

    <!-- MyPromoCodeActivity -->

    <string name="my_promo_code">Мой промокод</string>
    <string name="copy">Скопировать</string>
    <string name="share">Поделиться</string>
    <string name="promo_code_description">Когда другой пользователь установит приложение и
    введет ваш промокод в разделе Ввести промокод, вся реклама будет отключена!</string>
    <string name="my_promo_code__share_text">https://play.google.com/store/apps/details?id=com.sportsandhealth.iamkerel.stomachvacuum
    \nПривет, попробуй приложение Вакуум Живота! Не забудь ввести мой промокод
    в настройках в разделе Ввести промокод.
    \n
    \nПромокод: </string>
    <string name="my_promo_code__code_copied">Промокод скопирован</string>

    <!-- EnterPromoCodeActivity -->

    <string name="enter_promo_code__enter_promo_code">Ввести промокод</string>
    <string name="enter_promo_code__send">Отправить</string>
    <string name="enter_promo_code__success">Промокод отправлен</string>
    <string name="enter_promo_code__error">Ошибка</string>

    <!-- NoPromoCodeActivity -->

    <string name="no_promo_code__promo_code_not_created">Промокод не создан</string>
    <string name="no_promo_code__description">По какой-то причине промокод не был создан.
    Проверьте соединение с интернетом или повторите позже.</string>
    <string name="no_promo_code__repeat">Повторить</string>

    <!-- Day activity -->

    <string name="stand_up">Вакуум стоя</string>
    <string name="lying_down">Вакуум лежа</string>
    <string name="table_top">Вакуум на четвереньках</string>

    <string name="seconds">сек</string>
    <string name="to_training">Начать</string>

    <!-- Training activity -->

    <string name="prepare">Приготовьтесь</string>
    <string name="end_training">Завершить тренировку?</string>

    <!-- RelaxDay activity -->

    <string name="relax">Отдых</string>
    <string name="skip">Пропустить</string>
    <string name="next">Следующее</string>

    <!-- EndDay activity -->

    <string name="day_complete">План выполнен!</string>
    <string name="to_program">Ок</string>
    <string name="end_day_activity__promo_title">Отключить рекламу?</string>
    <string name="end_day_activity__promo_description">Вы можете полностью отключить рекламу в
        приложении, пригласив друга!</string>
    <string name="end_day_activity__yes">Да</string>
    <string name="end_day_activity__no">Нет</string>

    <!-- Help activity -->

    <string name="stand_up_descr">\tТехники выполнения упражнения лежа, стоя и на четвереньках
        не имеют принципиальных различий, отличаются только сложностью выполнения. Вакуум стоя
        это более продвинутый вариант упражнения. Если у вас не получается сделать упражнение
        стоя, просто сделайте более простой вариант лежа на спине.
        \n\t• Встаньте прямо, сделайте глубокий вдох.
        \n\t• Затем выдохните весь набранный воздух через рот. Одновременно с выдохом
        втяните живот внутрь настолько сильно, насколько это возможно. Прижимать живот
        нужно, как бы втягивая его под ребра. Представьте, что вы хотите животом коснуться позвоночника.
        \n\t• Выдох с втягиванием живота не нужно делать резко, это движение можно делать около 5 секунд.
        \n\t• Задержите дыхание. Старайтесь не вдыхать воздух. Если сразу не получается,
        то короткими вдохами пополните запас кислорода, но не расслабляя мышц и не выходя из исходного положения.
        \n\t• Зафиксируйтесь в данном положении на указанное в таймере время.
        \n\t• Во время отдыха расслабьтесь, верните живот в естественное положение и спокойно подышите.
    </string>
    <string name="lying_down_descr">\tТехники выполнения упражнения лежа, стоя и на четвереньках
        не имеют принципиальных различий, отличаются только сложностью выполнения.
        Самая простая разновидность упражнения, подходящая для новичков – вакуум лежа.
        \n\t• Лягте на спину, немного согнув ноги в коленях. Руки расположите вдоль туловища.
        \n\t• Максимально вдохните воздух через нос.
        \n\t• Затем выдохните весь набранный воздух через рот. Одновременно с выдохом втяните
        живот внутрь настолько сильно, насколько это возможно. Прижимать живот нужно,
        как бы втягивая его под ребра. Представьте, что вы хотите животом коснуться позвоночника.
        \n\t• Выдох с втягиванием живота не нужно делать резко, это движение можно делать около 5 секунд.
        \n\t• Задержите дыхание. Старайтесь не вдыхать воздух. Если сразу не получается,
        то короткими вдохами пополните запас кислорода, но не расслабляя мышц и не выходя из исходного положения.
        \n\t• Зафиксируйтесь в данном положении на указанное в таймере время.
        \n\t• Во время отдыха расслабьтесь, верните живот в естественное положение и спокойно подышите.
    </string>
    <string name="table_top_descr">\tТехники выполнения упражнения лежа, стоя и на четвереньках
        не имеют принципиальных различий, отличаются только сложностью выполнения. Вакуум
        на четвереньках это более продвинутый вариант упражнения. Если у вас не получается сделать
        данное упражнение, просто сделайте более простой вариант лежа или стоя.
        \n\t• Встаньте на колени и упритесь руками в пол. В спине небольшой прогиб назад.
        \n\t• Сделайте максимально глубокий вдох.
        \n\t• Затем выдохните весь набранный воздух через рот. Одновременно с выдохом
        втяните живот внутрь настолько сильно, насколько это возможно. Прижимать живот нужно,
        как бы втягивая его под ребра. Представьте, что вы хотите животом коснуться позвоночника.
        \n\t• Выдох с втягиванием живота не нужно делать резко, это движение можно делать около 5 секунд.
        \n\t• Задержите дыхание. Старайтесь не вдыхать воздух. Если сразу не получается,
        то короткими вдохами пополните запас кислорода, но не расслабляя мышц и не выходя из исходного положения.
        \n\t• Зафиксируйтесь в данном положении на указанное в таймере время.
        \n\t• Во время отдыха расслабьтесь, верните живот в естественное положение и спокойно подышите.
    </string>

    <!-- ProgramSelection activity -->

    <string name="exit_from_app">Выйти из приложения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <!-- Ad Units -->


    <string name="app_ad_id">ca-app-pub-8275330758485766~2662209244</string>

    <!-- For Testing
    <string name="end_day_interstitial_ad_unit_id">ca-app-pub-8275330758485766/2616787844</string>
    <string name="day_interstitial_ad_unit_id">ca-app-pub-8275330758485766/3698941787</string>
    <string name="end_training_ad_unit_id">ca-app-pub-8275330758485766/9639002906</string>
    <string name="relax_native_ad_unit_id">ca-app-pub-8275330758485766/9573247582</string>
    <string name="relax_banner_ad_unit_id">ca-app-pub-8275330758485766/2394772432</string>
    -->

    <string name="end_day_interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="day_interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="end_training_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="relax_native_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="relax_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
