<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/basic"
            android:textSize="@dimen/h1"
            android:text="@string/settings"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/notificationCard"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/notificationsItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:layout_margin="10dp"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h2"
                    android:text="@string/notifications"/>

                <TextView
                    android:id="@+id/notificationStatus"
                    android:layout_below="@id/notificationsItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/h3"
                    android:textColor="@color/light_grey_blue"
                    android:text="@string/switch_off"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/adFreeCard"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/adFreeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:layout_margin="10dp"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h2"
                    android:text="@string/ad_free_version"/>

                <TextView
                    android:id="@+id/adFreeStatus"
                    android:layout_below="@id/adFreeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/h3"
                    android:textColor="@color/light_grey_blue"
                    android:text="@string/not_activated"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/enterPromoCodeCard"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/enterPromoCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:layout_margin="10dp"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h2"
                    android:text="@string/enter_promo_code"/>

                <TextView
                    android:layout_below="@id/enterPromoCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/h3"
                    android:textColor="@color/light_grey_blue"
                    android:text="@string/enter_friend_promo_code"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/progressRemovalCard"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/progressRemovalCardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:layout_margin="10dp"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h2"
                    android:text="@string/settings_activity__progress_removal_title"/>

                <TextView
                    android:layout_below="@id/progressRemovalCardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/h3"
                    android:textColor="@color/light_grey_blue"
                    android:text="@string/settings_activity__progress_removal_description"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settings_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/home" />

</RelativeLayout>